--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a test Rails4 App for Roguelytics (https://www.roguelytics.com)
 
-Things you may want to cover:
+Sign up and get your keys for free.
 
-* Ruby version
+After you signup, update the configuration file with your keys: config/initializer/roguelytics.rb
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
